# fundgrube-notifier

./: .gitignore  README.md  fundgrube_notifier.py  main.py  pyproject.toml  requirements.txt  sample.env  sample_products.json
data/: sample_products.json
